--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,28 @@
     --line-size: 2px;
 }
 
-body {
-    background-color: var(--bg-color);
+* {
+    margin: 0;
+    font-size: medium;
+    font-weight: normal;
     color: var(--fg-color);
+    background-color: var(--bg-color);
     font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
+button, input {
     border: var(--line-size) solid var(--fg-color);
-    background-color: var(--bg-color);
-    color: var(--fg-color);
+    padding: 0.5em;
+    margin: 0.5em 0;
+}
+
+button {
+    font-weight: bold;
+}
+
+input:focus, .post:hover, button:hover {
+    outline: 4px solid var(--fg-color);
+    outline-offset: -4px;
 }
 
 .post {
@@ -22,31 +34,43 @@ button {
     padding: 10px;
 }
 
-.post:hover {
-    outline: 4px solid var(--fg-color);
-    outline-offset: -4px;
+form {
+    margin: 1em
 }
 
+form > * {
+    font-weight: bold;
+}
 
-.post:active {
+.post:active, button:active {
     background-color: var(--fg-color);
     color: var(--bg-color);
 }
 
-.post-title {
+::selection {
+    background: var(--fg-color);
+    color: var(--bg-color);
+}
+
+form :disabled {
+    background: linear-gradient(0, var(--bg-color), var(--bg-color)), repeating-linear-gradient(-45deg, var(--bg-color) 0px, var(--bg-color) 4px, var(--fg-color) 4px, var(--fg-color) 8px);
+    background-clip: padding-box, border-box;
+    background-origin: border-box, border-box;
+    border-color: transparent;
+    pointer-events: none;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: x-large;
+    margin-bottom: 1em;
+}
+
+h2 {
     font-weight: bold;
     font-size: large;
 }
 
 .post-info {
     font-size: small;
-}
-
-a {
-    color: var(--fg-color);
-}
-
-::selection {
-    background: var(--fg-color);
-    color: var(--bg-color);
 }
