--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     --bg-color: #012E6E;
     --fg-color: #8FBEFF;
     --line-size: 2px;
+    --padding: 0.5em;
 }
 
 * {
@@ -15,8 +16,8 @@
 
 button, input {
     border: var(--line-size) solid var(--fg-color);
-    padding: 0.5em;
-    margin: 0.5em 0;
+    padding: var(--padding);
+    margin: var(--padding) 0;
 }
 
 button {
@@ -30,8 +31,8 @@ input:focus, .post:hover, button:hover {
 
 .post {
     border: var(--line-size) solid var(--fg-color);
-    margin: 10px;
-    padding: 10px;
+    margin: var(--padding);
+    padding: var(--padding);
 }
 
 form {
@@ -40,6 +41,15 @@ form {
 
 form > * {
     font-weight: bold;
+}
+
+#notification {
+    padding: var(--padding);
+    background-color: var(--fg-color);
+    color: var(--bg-color);
+    position: absolute;
+    bottom: 0%;
+    width: 100%;
 }
 
 .post:active, button:active {
