--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,22 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.nav-bar {
+    height: min-content;
+    background-color: var(--fg-color);
+    color: var(--bg-color);
+}
+
+.nav-bar > * {
+    display: inline-block;
+    margin: 0;
+    background-color: inherit;
+    color: inherit;
+    text-decoration: none;
+    font-weight: bold;
+    padding: var(--padding);
+}
+
 button, input, .comment {
     border: var(--line-size) solid var(--fg-color);
     padding: var(--padding);
@@ -26,18 +42,18 @@ button {
     margin-right: var(--margin);
 }
 
-input:focus, .post:hover, button:hover {
+input:focus, .list-item:hover, button:hover {
     outline: 4px solid var(--fg-color);
     outline-offset: -4px;
 }
 
-.post {
+.list-item {
     border: var(--line-size) solid var(--fg-color);
     padding: var(--padding);
     margin-bottom: var(--margin);
 }
 
-.post > .post-title {
+.list-item-title {
     font-weight: bold;
     background-color: inherit;
     color: inherit;
@@ -65,7 +81,7 @@ form > div {
     font-weight: bold;
 }
 
-body {
+.content {
     margin: var(--margin)
 }
 
@@ -86,7 +102,7 @@ body {
     width: 100%;
 }
 
-.post:active, button:active {
+.list-item:active, button:active {
     background-color: var(--fg-color);
     color: var(--bg-color);
 }
