--- a/src/index.css
+++ b/src/index.css
@@ -1,145 +1,168 @@
 :root {
-    --bg-color: #003866;
-    --fg-color: #94CFFF;
-    --line-size: 2px;
-    --padding: 0.5em;
-    --margin: 1rem;
+  --bg-color: #003866;
+  --fg-color: #94cfff;
+  --line-size: 2px;
+  --padding: 0.5rem;
+  --margin: 1rem;
+  --max-width: 100ch;
 }
 
 * {
-    margin: 0;
-    font-size: medium;
-    font-weight: normal;
-    color: var(--fg-color);
-    background-color: var(--bg-color);
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.nav-bar {
-    height: min-content;
-    background-color: var(--fg-color);
-    color: var(--bg-color);
-}
-
-.nav-bar > * {
-    display: inline-block;
-    margin: 0;
-    background-color: inherit;
-    color: inherit;
-    text-decoration: none;
-    font-weight: bold;
-    padding: var(--padding);
-}
-
-.nav-bar > hr {
-    display: none;
-}
-
-.nav-bar > hr ~ * {
-    float:right;
-}
-
-button, input {
-    border: var(--line-size) solid var(--fg-color);
-    padding: var(--padding);
-    margin: var(--padding) 0;
-}
-
-button {
-    font-weight: bold;
-    margin-right: var(--margin);
-}
-
-input:focus, .list-item:hover, button:hover {
-    outline: 4px solid var(--fg-color);
-    outline-offset: -4px;
-}
-
-.list > * {
-    margin: var(--margin) 0;
-    border: var(--line-size) solid var(--fg-color);
-    padding: var(--padding);
-    overflow: hidden;
-}
-
-.list-item-header {
-    font-weight: bold;
-    background-color: inherit;
-    color: inherit
-}
-
-hr {
-    border: none;
-    border-top: var(--line-size) solid var(--fg-color);
-    margin: var(--margin) 0;
-}
-
-form input {
-    width: 300px;
-}
-
-form div {
-    margin-bottom: var(--margin);
-}
-
-form button {
-    margin-right: var(--margin);
-}
-
-form > div {
-    font-weight: bold;
-}
-
-.content {
-    margin: var(--margin)
-}
-
-#input-comment {
-    margin-right: var(--margin);
+  margin: 0;
+  font-size: medium;
+  font-weight: normal;
+  color: var(--fg-color);
+  background-color: var(--bg-color);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #notification {
-    padding: var(--padding);
-    background-color: var(--fg-color);
-    color: var(--bg-color);
-    position: absolute;
-    bottom: 0%;
-    width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  /* TODO fix */
+  padding: var(--padding) calc((100% - var(--max-width)) / 2);
+  width: min(var(--max-width), 100%);
+  font-weight: bold;
+  background-color: var(--fg-color);
+  color: var(--bg-color);
+  /* border: 2px solid red; */
 }
 
-.list-item:active, button:active {
-    background-color: var(--fg-color);
-    color: var(--bg-color);
+.nav-bar {
+  background-color: var(--fg-color);
+  color: var(--bg-color);
+  padding: 0 calc((100vw - var(--max-width)) / 2 - var(--margin));
+}
+
+.nav-bar > * {
+  display: inline-block;
+  margin: 0;
+  background-color: yellow;
+  color: inherit;
+  text-decoration: none;
+  font-weight: bold;
+  padding: var(--padding);
+}
+
+.nav-bar > hr {
+  display: none;
+}
+
+.nav-bar > hr ~ * {
+  float: right;
+}
+
+.content {
+  width: min(var(--max-width), 100% - calc(var(--margin) * 2));
+  margin: auto;
+  padding: var(--margin);
+}
+
+button,
+input {
+  border: var(--line-size) solid var(--fg-color);
+  padding: var(--padding);
+  margin: var(--padding) 0;
+}
+
+button {
+  font-weight: bold;
+  margin-right: var(--margin);
+}
+
+input:focus,
+.list-item:hover,
+button:hover {
+  outline: 4px solid var(--fg-color);
+  outline-offset: -4px;
+}
+
+.list > * {
+  margin: var(--margin) 0;
+  border: var(--line-size) solid var(--fg-color);
+  padding: var(--padding);
+  width: unset;
+  overflow: hidden;
+}
+
+.list-item-header {
+  font-weight: bold;
+  background-color: inherit;
+  color: inherit;
+}
+
+hr {
+  border: none;
+  border-top: var(--line-size) solid var(--fg-color);
+  margin: var(--margin) 0;
+}
+
+form {
+  width: 40ch;
+}
+
+form input {
+  width: calc(100% - var(--margin));
+}
+
+form div {
+  margin-bottom: var(--margin);
+}
+
+form button {
+  margin-right: var(--margin);
+}
+
+form > div {
+  font-weight: bold;
+}
+
+#input-comment {
+  margin-right: var(--margin);
+}
+
+.list-item:active,
+button:active {
+  background-color: var(--fg-color);
+  color: var(--bg-color);
 }
 
 ::selection {
-    background: var(--fg-color);
-    color: var(--bg-color);
+  background: var(--fg-color);
+  color: var(--bg-color);
 }
 
 form :disabled {
-    background: linear-gradient(0, var(--bg-color), var(--bg-color)), repeating-linear-gradient(-45deg, var(--bg-color) 0px, var(--bg-color) 4px, var(--fg-color) 4px, var(--fg-color) 8px);
-    background-clip: padding-box, border-box;
-    background-origin: border-box, border-box;
-    border-color: transparent;
-    pointer-events: none;
+  background: linear-gradient(0, var(--bg-color), var(--bg-color)),
+    repeating-linear-gradient(
+      -45deg,
+      var(--bg-color) 0px,
+      var(--bg-color) 4px,
+      var(--fg-color) 4px,
+      var(--fg-color) 8px
+    );
+  background-clip: padding-box, border-box;
+  background-origin: border-box, border-box;
+  border-color: transparent;
+  pointer-events: none;
 }
 
 .post-details {
-    line-height: 1.5;
+  line-height: 1.5;
 }
 
 b {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 h1 {
-    font-weight: bold;
-    font-size: x-large;
-    margin-bottom: var(--margin);
+  font-weight: bold;
+  font-size: x-large;
+  margin-bottom: var(--margin);
 }
 
 h2 {
-    font-weight: bold;
-    font-size: large;
+  font-weight: bold;
+  font-size: large;
 }
