--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,12 @@
   bottom: 0;
   left: 0;
   box-sizing: border-box;
-  /* TODO fix */
   padding: var(--padding)
     max(var(--padding), calc((100% - var(--max-width)) / 2 - var(--padding)));
   width: 100%;
   font-weight: bold;
   background-color: var(--fg-color);
   color: var(--bg-color);
-  /* border: 2px solid red; */
 }
 
 .nav-bar {
@@ -40,7 +38,7 @@
 .nav-bar > * {
   display: inline-block;
   margin: 0;
-  background-color: yellow;
+  background-color: inherit;
   color: inherit;
   text-decoration: none;
   font-weight: bold;
